--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.8.0",
-    "parcel": "^2.8.0",
-    "rimraf": "^3.0.2"
+    "@parcel/transformer-sass": "^2.8.3",
+    "parcel": "latest"
   }
 }
